# game-of-life

./: CMakeLists.txt  README.md  game_of_life.md
src/: main.cpp
